--- a/Tier 1/Cryptography/1.1 Keyz.md
+++ b/Tier 1/Cryptography/1.1 Keyz.md
@@ -1,1 +1,20 @@
 # 1.1 Keyz
+
+**Description:**
+
+> While webshells are nice, it'd be nice to be able to login directly. To do so, please add your own public key to ~/.ssh/authorized_keys, using the webshell. Make sure to copy it correctly! The key is in the ssh banner, displayed when you login remotely with ssh, to shell2017.picoctf.com
+>
+>
+>  HINTS
+>
+> There are plenty of tutorials out there. This one covers key generation: <https://confluence.atlassian.com/bitbucketserver/creating-ssh-keys-776639788.html>
+>
+> Then, use the web shell to copy/paste it, and use the appropriate tool to ssh to the server using your key
+
+We need to create a ssh-key:
+
+![My image](http://prntscr.com/k0goio)
+
+
+and insert it in ~/.ssh/authorized_keys
+
