--- a/Tier 1/Cryptography/1.1 Keyz.md
+++ b/Tier 1/Cryptography/1.1 Keyz.md
@@ -13,8 +13,12 @@
 
 We need to create a ssh-key:
 
-![My image](http://prntscr.com/k0goio)
+![My image](https://image.prntscr.com/image/BfPFMTZdRrWHcRHy9teuKQ.png)
 
+The -t argument specifies the encryption method. In this case I use RSA
 
-and insert it in ~/.ssh/authorized_keys
+And insert it in ~/.ssh/authorized_keys
 
+![My Image](https://image.prntscr.com/image/53szzV4sQQmqxJKsmmuolw.png)
+
+The **cat** program prints the contents of a file to stdout, **>** redirects the output to a file. If the file does not exist a new one will be created, if a file with given name already exsists it will be overwritten. To prevent this **>>** can be used, it will append the output to the file. 
