--- a/Tier 1/Misc/1.4 looooong.md
+++ b/Tier 1/Misc/1.4 looooong.md
@@ -29,4 +29,8 @@ There are a couple ways to solve this.
 
 Method to automate the process. Dosn't use `nc` to comunicate with the service. Creates it's own [Socket](https://en.wikipedia.org/wiki/Berkeley_sockets) to send and receive messages.
 We filter with [RegEx](https://en.wikipedia.org/wiki/Regular_expression) the parameters from the first message we receive.
-##### Python
+#### [Python](https://github.com/derheker/PicoCTF2017/blob/master/Tier%201/Misc/long.py)
+To understand this read about [Python re library](https://docs.python.org/2/library/re.html) and [Python Sockets](https://docs.python.org/2/library/socket.html).
+
+#### [Bash](https://github.com/derheker/PicoCTF2017/blob/master/Tier%201/Misc/long.sh)
+Using [Grep](http://man7.org/linux/man-pages/man1/grep.1.html), [sed](http://man7.org/linux/man-pages/man1/sed.1.html), [RegEx](http://tldp.org/LDP/abs/html/x17129.html) and a basic [loop](http://tldp.org/LDP/abs/html/loops1.html)
