--- a/Tier 1/Misc/1.4 looooong.md
+++ b/Tier 1/Misc/1.4 looooong.md
@@ -24,6 +24,8 @@ There are a couple ways to solve this.
 
 ![asd](https://image.prntscr.com/image/fqBILHxsSMaJmrnP0K--WQ.png)
 
+You can read here about [redirection](http://www.ee.surrey.ac.uk/Teaching/Unix/unix3.html). With this we can `echo` to a file.
+
 
 ## the "hard" Way 
 
@@ -33,4 +35,4 @@ We filter with [RegEx](https://en.wikipedia.org/wiki/Regular_expression) the par
 To understand this read about the [Python re library](https://docs.python.org/2/library/re.html) and [Python Sockets](https://docs.python.org/2/library/socket.html).
 
 #### [Bash](https://github.com/derheker/PicoCTF2017/blob/master/Tier%201/Misc/long.sh)
-Using [grep](http://man7.org/linux/man-pages/man1/grep.1.html), [sed](http://man7.org/linux/man-pages/man1/sed.1.html), [RegEx](http://tldp.org/LDP/abs/html/x17129.html) and a basic [loop](http://tldp.org/LDP/abs/html/loops1.html)
+Using [grep](http://man7.org/linux/man-pages/man1/grep.1.html), [sed](http://man7.org/linux/man-pages/man1/sed.1.html), [RegEx](http://tldp.org/LDP/abs/html/x17129.html), [pipes](http://tldp.org/HOWTO/Bash-Prog-Intro-HOWTO-4.html), [redirection](http://www.ee.surrey.ac.uk/Teaching/Unix/unix3.html) and a basic [loop](http://tldp.org/LDP/abs/html/loops1.html)
